--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,15 +2,15 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_floating={}
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Objects/Door/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Objects/", "res://Objects/Door/", "res://Actors/", "res://Actors/Player/", "res://Actors/Enemies/", "res://Actors/Enemies/Guard/", "res://_Levels/")
+dock_filesystem_selected_paths=PackedStringArray("res://Objects/Door/Door.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Objects/", "res://Objects/Door/", "res://Assets/", "res://Actors/", "res://Actors/Player/", "res://Actors/Enemies/Guard/", "res://_Levels/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -24,26 +24,28 @@ dock_hsplit_3=-270
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
-dock_5="Inspector,Node,History"
+dock_5="Node,Inspector,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray()
-current_scene=""
-center_split_offset=0
+open_scenes=PackedStringArray("res://_Levels/Level1.tscn", "res://Actors/Player/Player.tscn", "res://Objects/Door/Door.tscn")
+current_scene="res://_Levels/Level1.tscn"
+center_split_offset=-257
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
+selected_bottom_panel_item=0
 
 [EditorWindow]
 
 screen=0
-mode="maximized"
-position=Vector2i(0, 29)
+mode="windowed"
+position=Vector2i(1, 38)
+size=Vector2i(1024, 981)
 
 [ScriptEditor]
 
-open_scripts=["res://Actors/Player/Player.gd"]
-selected_script="res://Actors/Player/Player.gd"
+open_scripts=["res://Objects/Door/Door.gd", "res://Actors/Player/Player.gd"]
+selected_script="res://Objects/Door/Door.gd"
 open_help=[]
 script_split_offset=200
 list_split_offset=0
@@ -51,8 +53,8 @@ zoom_factor=1.0
 
 [GameView]
 
-floating_window_rect=Rect2i(0, 0, 0, 0)
-floating_window_screen=-1
+floating_window_rect=Rect2i(514, 156, 1164, 695)
+floating_window_screen=0
 
 [ShaderEditor]
 
